--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -22,42 +22,39 @@
         </div>
 </div> -->
 
-            <div class="wmuSlider example1">
-
-                <div class="wmuSliderWrapper">
-                    <article style="position: absolute; width: 100%; opacity: 0;">
-                        <div class="banner">
-                            <div class="banner_container">
-                        <div class="banner_right">
-                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                            <h2>Awesome , Clean & Unique Template</h2>
-                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
-                        </div>
-                        <div class="clearfix"></div>
-                            </div>
-                        </div>
-                    </article>
-                    <article style="position: relative; width: 100%; opacity: 1;">
-                        <div class="about_banner">
-                            <div class="banner_container">
-                        <div class="banner_right">
-                            <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                            <h2>There are many variations</h2>
-                            <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
-                        </div>
-                        <div class="clearfix"></div>
-                            </div>
-                        </div>
-                    </article>
+<div class="wmuSlider example1">
+    <div class="wmuSliderWrapper">
+        <article style="position: absolute; width: 100%; opacity: 0;">
+            <div class="banner">
+                <div class="banner_container">
+                    <div class="banner_right">
+                        <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
+                        <h2>Awesome , Clean & Unique Template</h2>
+                        <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                    </div>
+                    <div class="clearfix"></div>
                 </div>
-
-
-                <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a>
-                <script src="/static/js/basejs/jquery.wmuSlider.js"></script>
-                <script>
-                    $('.example1').wmuSlider();
-                </script>
+            </div>
+        </article>
+        <article style="position: relative; width: 100%; opacity: 1;">
+            <div class="about_banner">
+                <div class="banner_container">
+                    <div class="banner_right">
+                        <h1>Welcome to <span class="color1">B</span>otDocker<span class="color1">.</span></h1>
+                        <h2>There are many variations</h2>
+                        <a href="#" title="Online Reservation" class="btn btn-primary btn-normal btn-inline " target="_self">Read More about gelios</a>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </article>
     </div>
+    <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a>
+    <script src="/static/js/basejs/jquery.wmuSlider.js"></script>
+    <script>
+        $('.example1').wmuSlider();
+    </script>
+</div>
 
     <div class="grid_1 text-center">
         <div class="container">
@@ -89,17 +86,17 @@
                     <li class="date_left">
                         <div class="date">
                             <span>
-                               15
+                               16
                            </span>
-                           06
+                           04
                        </div>
                    </li>
                    <li class="date_right">
-                    <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                    <p>BotDocker 内测版上线</p>
                 </li>
                 <div class="clearfix"> </div>
             </ul>
-            <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+            <p class="m_1">国际上对机器人的概念已经逐渐趋近一致。一般来说，人们都可以接受这种说法，即机器人是靠自身动力和控制能力来实现各种功能的一种机器。联合国标准化组织采纳了美国机器人协会给机器人下的定义：“一种可编程和多功能的操作机；或是为了执行不同的任务而具有可用电脑改变和可编程动作的专门系统。”它能为人类带来许多方便之处！</p>
             <a href="#"><span class="more">More Information</span></a>
         </div>
         <div class="col-md-4 col_3">
@@ -107,17 +104,17 @@
                 <li class="date_left">
                     <div class="date">
                         <span>
-                           15
+                           16
                        </span>
-                       06
+                       03
                    </div>
                </li>
                <li class="date_right">
-                <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                <p> BotDocker 原型定义</p>
             </li>
             <div class="clearfix"> </div>
         </ul>
-        <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+        <p class="m_1">国际上对机器人的概念已经逐渐趋近一致。一般来说，人们都可以接受这种说法，即机器人是靠自身动力和控制能力来实现各种功能的一种机器。联合国标准化组织采纳了美国机器人协会给机器人下的定义：“一种可编程和多功能的操作机；或是为了执行不同的任务而具有可用电脑改变和可编程动作的专门系统。”它能为人类带来许多方便之处！</p>
         <a href="#"><span class="more">More Information</span></a>
         </div>
             <div class="col-md-4 col_3">
