--- a/maker/uc/templates/uc_basic_info.html
+++ b/maker/uc/templates/uc_basic_info.html
@@ -80,7 +80,8 @@
 {% endblock %}
 {% block my_js %}
 <script>
-   $(".form-group #id_username").attr("disabled",true); 
+   // $(".form-group #id_username").attr("disabled",true); 
+   // $(".form-group #id_email").attr("disabled",true); 
    $(".form-group input").addClass('form-control');
 </script>
 {% endblock %}
