home view and market view

--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -74,7 +74,8 @@
             <div class="col-md-4 box_1">
                 <i class="icon3"> </i>
                 <h3>用户个性化定制</h3>
-                <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                <p>基于NLP技术的高智能知识库满足不同场景的个性化及商业需求</p>
+                <p>打包超过<span class="color1">500</span>多种实用生活服务功能</p>
             </div>
         </div>
     </div>
@@ -125,15 +126,15 @@
                             <span>
                                15
                            </span>
-                           06
+                           03
                        </div>
                    </li>
                    <li class="date_right">
-                    <p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus Morbi in dui quis est pulvinar</p>
+                    <p>BotDocker团队组建</p>
                 </li>
                 <div class="clearfix"> </div>
             </ul>
-            <p class="m_1">Lollipop liquorice lollipop ice cream cheesecake halvah jelly-o. Gummies lollipop macaroon marshmallow icing. Cookie chupa chups cake dessert lollipop marzipan donut apple pie.</p>
+            <p class="m_1"></p>
             <a href="#"><span class="more">More Information</span></a>
         </div>
     </div>
