--- a/maker/uc/templates/uc_set_bot.html
+++ b/maker/uc/templates/uc_set_bot.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block uc_content %}
- <form class="form-horizontal">
+ <form class="form-horizontal" action="/uc/setbot/" method="post">
 <div class="box box-primary">
 <div class="box-header with-border">
   <h3 class="box-title">基本设置</h3>
@@ -30,21 +30,27 @@
                     <label for="inputName" class="col-sm-2 control-label">机器人昵称</label>
 
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    <!--
+                      <input type="text" class="form-control" id="inputName" name="robotsettings.alias" placeholder="" style="width: 518px;">
+                      -->
+{{form.rob_alias}}
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="inputEmail" class="col-sm-2 control-label">机器人性别</label>
 
+                    <label for="inputEmail" class="col-sm-2 control-label">机器人性别</label>
                     <div class="col-sm-10">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="" style="width: 518px;">
+{{form.rob_gender}}
                     </div>
                   </div>
                   <div class="form-group">
                     <label for="inputName" class="col-sm-2 control-label">机器人年龄</label>
 
                     <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName" placeholder="" style="width: 518px;">
+                    <!--
+                      <input type="text" class="form-control" id="inputName" name="robotsettings.age" placeholder="" style="width: 518px;">
+                      -->
+{{form.rob_age}}
                     </div>
                   </div>
                   <div class="form-group">
