--- a/maker/home/templates/home.html
+++ b/maker/home/templates/home.html
@@ -29,8 +29,7 @@
             <div class="banner">
                 <div class="banner_container">
                     <div class="banner_right">
-                        <h1>欢迎访问<span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                        <h2>快速构建您的专属智能机器人的平台</h2>
+                        <h2>基于人工智能的bot云平台</h2>
                         <a href="/home/about/" title="了解更多" class="btn btn-primary btn-normal btn-inline " target="_self">了解BotDocker更多</a>
                     </div>
                     <div class="clearfix"></div>
@@ -41,8 +40,7 @@
             <div class="about_banner">
                 <div class="banner_container">
                     <div class="banner_right">
-                        <h1>欢迎访问<span class="color1">B</span>otDocker<span class="color1">.</span></h1>
-                        <h2>快速构建您的专属智能机器人的平台</h2>
+                        <h2>基于人工智能的bot云平台</h2>
                         <a href="/home/about/" title="了解更多" class="btn btn-primary btn-normal btn-inline " target="_self">了解BotDocker更多</a>
                     </div>
                     <div class="clearfix"></div>
