--- a/maker/uc/templates/uc_site_msg.html
+++ b/maker/uc/templates/uc_site_msg.html
@@ -18,6 +18,11 @@
 </div>
  <div ><img class="img-responsive pad" alt="Photo" src="/static/images/under_construction.png"></div>
 </div>
-
-
 {% endblock %}
+{% block my_js %}
+<script>
+    $(function(){
+        cut_active('l_08');
+    });
+    </script>
+    {% endblock %}
