--- a/maker/uc/templates/uc_system_notify.html
+++ b/maker/uc/templates/uc_system_notify.html
@@ -17,3 +17,10 @@
  <div ><img class="img-responsive pad" alt="Photo" src="/static/images/under_construction.png"></div>
 </div>
 {% endblock %}
+{% block my_js %}
+<script>
+    $(function(){
+        cut_active('l_07');
+    });
+    </script>
+ {% endblock  %}
