--- a/maker/uc/templates/uc_home.html
+++ b/maker/uc/templates/uc_home.html
@@ -15,6 +15,9 @@
 {% endblock %}  
 {% block my_js %}
 <script>
+    $(function(){
+        cut_active('l_09');
+    });
   $('.details').click(
     
     function(){
