--- a/maker/uc/templates/uc_white_list.html
+++ b/maker/uc/templates/uc_white_list.html
@@ -16,8 +16,11 @@
  <div ><img class="img-responsive pad" alt="Photo" src="/static/images/under_construction.png"></div>
 </div>
 {% endblock %}
-
+{% block my_js %}
 <script>
+    $(function(){
+        cut_active('l_05');
+    });
 	/*jq(function () {
 		var cur = "l_11";
 		jq('.lis li').removeClass('active');
@@ -42,24 +45,6 @@
 		}
 		;
 	});*/
-           function cut_active(cur) {
-                jq('.lis li').removeClass('active');
-                jq('#' + cur).addClass('active');
-                jq('#' + cur).parent().show().prev().addClass('active');
-                var lislen = jq('.lis').length;
-                for (var j = 0; j < lislen; j++) {
-                    if (jq('.lis').eq(j).css('display') == 'block') {
-                        jq('.lis').eq(j).find('a').addClass('text_name');
-                    } else {
-                        jq('.lis').eq(j).find('a').removeClass('text_name');
-                    }
-                }
-                var text_name = jq('.sidebar_nav .text_name');
-                var lens = text_name.length;
-                for (var q = 0; q < lens; q++) {
-                    text_name.eq(q).attr({
-                        y: (q + 1) * 40
-                    });
-                }
-        };
+
 </script> 
+{% endblock %}
