--- a/maker/home/templates/home_blogs.html
+++ b/maker/home/templates/home_blogs.html
@@ -9,7 +9,7 @@
 <link href="/static/css/swiper.min.css" rel="stylesheet" type="text/css">
 {% endcompress %}
 {% endblock %}
-{% block nav_main_service %}current{% endblock %}
+{% block nav_main_blog %}current{% endblock %}
 
 {% block content %}
      <div style="padding:20px;">
