--- a/maker/home/templates/home_market.html
+++ b/maker/home/templates/home_market.html
@@ -10,7 +10,7 @@
 <link href="/static/css/market/style.css" rel="stylesheet" type="text/css">
 {% endcompress %}
 {% endblock %}
-{% block nav_main_about %}current{% endblock %}
+{% block nav_main_market %}current{% endblock %}
 
 {% block content %}
 <div class="products">
