--- a/maker/templates/m_base.html
+++ b/maker/templates/m_base.html
@@ -10,7 +10,7 @@
   <meta name="applicable-device" content="mobile">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title>{% block title %}流氓兔{% endblock %}</title>
+  <title>{% block title %}Bot Docker{% endblock %}</title>
   <link rel="shortcut icon" href="/static/images/favicon.ico">
   {% compress css %}
       <link rel="stylesheet" type="text/css" href="{% static "css/m_common.css"%}">
@@ -45,7 +45,7 @@
                                         </li>
                                         <li><a class="gn-icon"><i class="m3icon icon-gn-cases">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>案例中心</span></a>
                                               <ul class="gn-submenu">
-                                                    <li><a href="http://www.ioniconline.com" class="gn-icon"><span>流氓兔&nbsp;GangsterRabbit</span></a></li>
+                                                    <li><a href="http://www.ioniconline.com" class="gn-icon"><span>Bot Docker&nbsp;GangsterRabbit</span></a></li>
                                                     <li><a href="http://www.gezishuo.com" class="gn-icon"><span>小格格&nbsp;GeZiShuo</span></a></li>
                                                     <li><a href="http://www.21ke.com" class="gn-icon"><span>老克搞机&nbsp;21KE</span></a></li>
                                               </ul>
@@ -93,7 +93,7 @@
         <li><span class="i-sep"></span><a href="/?flavour=full">电脑版</a></li>
         <li><span class="i-sep"></span><a href="#">关于我们</a></li>
     </ul>
-    <div class="company-info">流氓兔：<a href="http://www.liumangtu.com">www.liumangtu.com</a>&nbsp;ICP备案：苏ICP备XXXXXXX号</div>
+    <div class="company-info">Bot Docker：<a href="http://www.botdocker.com">www.botdocker.com</a>&nbsp;ICP备案：苏ICP备XXXXXXX号</div>
 </div>
 {% compress js %}
      <script type="text/javascript" src="{% static "js/jquery-1.11.3.min.js"%}"></script>
