--- a/maker/templates/m_gnmenu.html
+++ b/maker/templates/m_gnmenu.html
@@ -26,7 +26,7 @@
                                 </li>
                                 <li><a class="gn-icon"><i class="m3icon icon-gn-cases">&nbsp;&nbsp;&nbsp;&nbsp;</i><span>案例中心</span></a>
                                       <ul class="gn-submenu">
-                                            <li><a href="http://www.ioniconline.com" class="gn-icon"><span>流氓兔&nbsp;GangsterRabbit</span></a></li>
+                                            <li><a href="http://www.ioniconline.com" class="gn-icon"><span>Bot Docker&nbsp;GangsterRabbit</span></a></li>
                                             <li><a href="http://www.gezishuo.com" class="gn-icon"><span>小格格&nbsp;GeZiShuo</span></a></li>
                                             <li><a href="http://www.21ke.com" class="gn-icon"><span>老克搞机&nbsp;21KE</span></a></li>
                                       </ul>
