--- a/maker/templates/mobile/home.html
+++ b/maker/templates/mobile/home.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load compress %}
 
-{% block title %}流氓兔{% endblock %}
+{% block title %}Bot Docker{% endblock %}
 {% block meta %}
 {% compress css %}
 <link rel="stylesheet" type="text/css" href="{% static "css/m_home.css"%}">
@@ -57,7 +57,7 @@
 
     <div class="top-sct top-sct-mfsj bottom-half-pixel">
             <p class=" site-info  ">
-                “流氓兔”基于微信机器人做深度定制，为广大客户提供一站式营销，客服，智能办公，知识仓库构建等前沿性服务和解决方案，让你的企业如虎添翼！
+                “Bot Docker”基于微信机器人做深度定制，为广大客户提供一站式营销，客服，智能办公，知识仓库构建等前沿性服务和解决方案，让你的企业如虎添翼！
             </p>
             <form class="mfsj-from" action="#">
                 <input class="row mfsj-name" name="chenghu" type="text" placeholder="您的称呼"/>
