--- a/maker/uc/templates/uc_func_config.html
+++ b/maker/uc/templates/uc_func_config.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load compress %}
 
-{% block title %}流氓兔{% endblock %}
+{% block title %}Bot Docker{% endblock %}
 {% block meta %}
  {% compress css %}
 	<link href="{% static "css/uc_function_config_list.css"%}" rel="stylesheet" type="text/css" />
