--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 {% load compress %}
 
-{% block title %}流氓兔{% endblock %}
+{% block title %}Bot Docker{% endblock %}
 {% block meta %}
 <meta />
 {% endblock %}
