--- a/maker/home/templates/home_blogs.html
+++ b/maker/home/templates/home_blogs.html
@@ -10,7 +10,7 @@
 {% endcompress %}
 {% endblock %}
 {% block nav_main_blog %}current{% endblock %}
-
+ {% block page_title %}社区 {% endblock %}
 {% block content %}
      <div style="padding:20px;">
             BLOGS
