--- a/maker/home/templates/home_market.html
+++ b/maker/home/templates/home_market.html
@@ -11,7 +11,7 @@
 {% endcompress %}
 {% endblock %}
 {% block nav_main_market %}current{% endblock %}
-
+ {% block page_title %}Bot 工场 {% endblock %}
 {% block content %}
 <div class="products">
     <div class="container">
@@ -232,31 +232,5 @@
         </div>
     </div>
 </div>
-{% endblock %}
-{% block my_js %}
-<script>
-    $('.details').click(
-
-            function(){
-                if( $(this).attr('st') == 'off' ){
-                    //未展开
-                    $(this).attr('st','on');
-                    //展开
-                    $(this).html('收起');
-                    $(this).parent().next().show();
-                    $(this).css('background','url(/template/web/img/icon190.png) left center no-repeat')
-
-                }else{
-                    $(this).attr('st','off');
-                    //收起
-                    $(this).html('查看详情');
-                    $(this).parent().next().hide();
-                    $(this).css('background','url(/template/web/img/icon191.png) left center no-repeat')
-                }
-            }
-    )
-
-</script>
-
-
+<div class="clearfix"></div>
 {% endblock %}
