--- a/maker/home/templates/home_portfolio.html
+++ b/maker/home/templates/home_portfolio.html
@@ -10,7 +10,7 @@
 {% endcompress %}
 {% endblock %}
 {% block nav_main_port %}current{% endblock %}
-
+ {% block page_title %}大事记 {% endblock %}
 {% block content %}
      <div style="padding:20px;">
              {% include 'our_portfolio.html'%}
