--- a/maker/templates/ad_test_data.html
+++ b/maker/templates/ad_test_data.html
@@ -1,11 +1,11 @@
 {% load staticfiles %}
 <figure  class="swiper-slide">
-    <a href="http://www.ioniconline.com">
+    <a href="{% url 'home_about' %}">
         <img src="{% static "images/ad/ad_ioniconline.png"%}" max-height="500px" width="100%">
     </a>
 </figure>
 <figure  class="swiper-slide">
-    <a href="http://www.ioniconline.com">
+    <a href="{% url 'home_about' %}">
         <img src="{% static "images/ad/ad_ionic1.png"%}" max-height="500px" width="100%">
     </a>
 </figure>
