translate home_market

--- a/maker/home/templates/home_market.html
+++ b/maker/home/templates/home_market.html
@@ -21,10 +21,10 @@
                     <div class="w_nav1">
                         <h4>Categories</h4>
                         <ul>
-                            <li><a href="#">New and Noteworthy</a></li>
-                            <li><a href="#">Entertainment</a></li>
-                            <li><a href="#">Lifestyle</a></li>
-                            <li><a href="#">Games</a></li>
+                            <li><a href="#">重要的</a></li>
+                            <li><a href="#">娱乐</a></li>
+                            <li><a href="#">生活</a></li>
+                            <li><a href="#">游戏</a></li>
                         </ul>
                     </div>
                 </div>
