--- a/maker/home/templates/home_market.html
+++ b/maker/home/templates/home_market.html
@@ -21,7 +21,7 @@
                     <div class="w_nav1">
                         <h4>分类</h4>
                         <ul>
-                            <li><a href="#">重要的</a></li>
+                            <li><a href="#">热门</a></li>
                             <li><a href="#">娱乐</a></li>
                             <li><a href="#">生活</a></li>
                             <li><a href="#">游戏</a></li>
